# harmonograph-cpp

./: .gitmodules  CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
harmonograph/: CMakeLists.txt
harmonograph/include/: linalg.hpp
harmonograph/include/cgl/: buffer.hpp
harmonograph/presets/: sample.yaml
harmonograph/shaders/: main.fs.glsl  main.vs.glsl
harmonograph/src/: main.cpp
